src/test/ui/regions/region-borrow-params-issue-29793-small.nll.stderr
error[E0597]: `x` does not live long enough
  --> $DIR/region-borrow-params-issue-29793-small.rs:19:34
   |
LL |         let f = |t: bool| if t { x } else { y }; // (separate errors for `x` vs `y`)
   |                 ---------        ^ borrowed value does not live long enough
   |                 |
   |                 value captured here
...
LL |     };
   |      - `x` dropped here while still borrowed

error[E0597]: `y` does not live long enough
  --> $DIR/region-borrow-params-issue-29793-small.rs:19:45
   |
LL |         let f = |t: bool| if t { x } else { y }; // (separate errors for `x` vs `y`)
   |                 ---------                   ^ borrowed value does not live long enough
   |                 |
   |                 value captured here
...
LL |     };
   |      - `y` dropped here while still borrowed

error[E0597]: `x` does not live long enough
  --> $DIR/region-borrow-params-issue-29793-small.rs:34:34
   |
LL |         let f = |t: bool| if t { x } else { y }; // (separate errors for `x` vs `y`)
   |                 ---------        ^ borrowed value does not live long enough
   |                 |
   |                 value captured here
...
LL |     };
   |      - `x` dropped here while still borrowed

error[E0597]: `y` does not live long enough
  --> $DIR/region-borrow-params-issue-29793-small.rs:34:45
   |
LL |         let f = |t: bool| if t { x } else { y }; // (separate errors for `x` vs `y`)
   |                 ---------                   ^ borrowed value does not live long enough
   |                 |
   |                 value captured here
...
LL |     };
   |      - `y` dropped here while still borrowed

error[E0597]: `x` does not live long enough
  --> $DIR/region-borrow-params-issue-29793-small.rs:65:34
   |
LL |         let f = |t: bool| if t { x } else { y }; // (separate errors for `x` vs `y`)
   |                 ---------        ^ borrowed value does not live long enough
   |                 |
   |                 value captured here
...
LL |     };
   |     - `x` dropped here while still borrowed
   |
note: borrowed value must be valid for the lifetime 'a as defined on the function body at 64:10...
  --> $DIR/region-borrow-params-issue-29793-small.rs:64:10
   |
LL |     fn g<'a>(x: usize, y:usize) -> Box<Fn(bool) -> usize + 'a> {
   |          ^^

error[E0597]: `y` does not live long enough
  --> $DIR/region-borrow-params-issue-29793-small.rs:65:45
   |
LL |         let f = |t: bool| if t { x } else { y }; // (separate errors for `x` vs `y`)
   |                 ---------                   ^ borrowed value does not live long enough
   |                 |
   |                 value captured here
...
LL |     };
   |     - `y` dropped here while still borrowed
   |
note: borrowed value must be valid for the lifetime 'a as defined on the function body at 64:10...
  --> $DIR/region-borrow-params-issue-29793-small.rs:64:10
   |
LL |     fn g<'a>(x: usize, y:usize) -> Box<Fn(bool) -> usize + 'a> {
   |          ^^

error[E0597]: `x` does not live long enough
  --> $DIR/region-borrow-params-issue-29793-small.rs:76:34
   |
LL |         let f = |t: bool| if t { x } else { y }; // (separate errors for `x` vs `y`)
   |                 ---------        ^ borrowed value does not live long enough
   |                 |
   |                 value captured here
...
LL |     };
   |     - `x` dropped here while still borrowed
   |
note: borrowed value must be valid for the lifetime 'a as defined on the function body at 75:10...
  --> $DIR/region-borrow-params-issue-29793-small.rs:75:10
   |
LL |     fn g<'a>(x: usize, y:usize) -> Box<Fn(bool) -> usize + 'a> {
   |          ^^

error[E0597]: `y` does not live long enough
  --> $DIR/region-borrow-params-issue-29793-small.rs:76:45
   |
LL |         let f = |t: bool| if t { x } else { y }; // (separate errors for `x` vs `y`)
   |                 ---------                   ^ borrowed value does not live long enough
   |                 |
   |                 value captured here
...
LL |     };
   |     - `y` dropped here while still borrowed
   |
note: borrowed value must be valid for the lifetime 'a as defined on the function body at 75:10...
  --> $DIR/region-borrow-params-issue-29793-small.rs:75:10
   |
LL |     fn g<'a>(x: usize, y:usize) -> Box<Fn(bool) -> usize + 'a> {
   |          ^^

error[E0597]: `x` does not live long enough
  --> $DIR/region-borrow-params-issue-29793-small.rs:100:38
   |
LL |             let f = |t: bool| if t { x } else { y }; // (separate errors for `x` vs `y`)
   |                     ---------        ^ borrowed value does not live long enough
   |                     |
   |                     value captured here
...
LL |         }
   |         - `x` dropped here while still borrowed
   |
note: borrowed value must be valid for the lifetime 'a as defined on the method body at 99:14...
  --> $DIR/region-borrow-params-issue-29793-small.rs:99:14
   |
LL |         fn g<'a>(&self, x: usize, y:usize) -> Box<Fn(bool) -> usize + 'a> {
   |              ^^

error[E0597]: `y` does not live long enough
  --> $DIR/region-borrow-params-issue-29793-small.rs:100:49
   |
LL |             let f = |t: bool| if t { x } else { y }; // (separate errors for `x` vs `y`)
   |                     ---------                   ^ borrowed value does not live long enough
   |                     |
   |                     value captured here
...
LL |         }
   |         - `y` dropped here while still borrowed
   |
note: borrowed value must be valid for the lifetime 'a as defined on the method body at 99:14...
  --> $DIR/region-borrow-params-issue-29793-small.rs:99:14
   |
LL |         fn g<'a>(&self, x: usize, y:usize) -> Box<Fn(bool) -> usize + 'a> {
   |              ^^

error[E0597]: `x` does not live long enough
  --> $DIR/region-borrow-params-issue-29793-small.rs:114:38
   |
LL |             let f = |t: bool| if t { x } else { y }; // (separate errors for `x` vs `y`)
   |                     ---------        ^ borrowed value does not live long enough
   |                     |
   |                     value captured here
...
LL |         }
   |         - `x` dropped here while still borrowed
   |
note: borrowed value must be valid for the lifetime 'a as defined on the method body at 113:14...
  --> $DIR/region-borrow-params-issue-29793-small.rs:113:14
   |
LL |         fn g<'a>(&self, x: usize, y:usize) -> Box<Fn(bool) -> usize + 'a> {
   |              ^^

error[E0597]: `y` does not live long enough
  --> $DIR/region-borrow-params-issue-29793-small.rs:114:49
   |
LL |             let f = |t: bool| if t { x } else { y }; // (separate errors for `x` vs `y`)
   |                     ---------                   ^ borrowed value does not live long enough
   |                     |
   |                     value captured here
...
LL |         }
   |         - `y` dropped here while still borrowed
   |
note: borrowed value must be valid for the lifetime 'a as defined on the method body at 113:14...
  --> $DIR/region-borrow-params-issue-29793-small.rs:113:14
   |
LL |         fn g<'a>(&self, x: usize, y:usize) -> Box<Fn(bool) -> usize + 'a> {
   |              ^^

error[E0597]: `x` does not live long enough
  --> $DIR/region-borrow-params-issue-29793-small.rs:142:38
   |
LL |             let f = |t: bool| if t { x } else { y }; // (separate errors for `x` vs `y`)
   |                     ---------        ^ borrowed value does not live long enough
   |                     |
   |                     value captured here
...
LL |         }
   |         - `x` dropped here while still borrowed
   |
note: borrowed value must be valid for the lifetime 'a as defined on the method body at 141:14...
  --> $DIR/region-borrow-params-issue-29793-small.rs:141:14
   |
LL |         fn g<'a>(&self, x: usize, y:usize) -> Box<Fn(bool) -> usize + 'a> {
   |              ^^

error[E0597]: `y` does not live long enough
  --> $DIR/region-borrow-params-issue-29793-small.rs:142:49
   |
LL |             let f = |t: bool| if t { x } else { y }; // (separate errors for `x` vs `y`)
   |                     ---------                   ^ borrowed value does not live long enough
   |                     |
   |                     value captured here
...
LL |         }
   |         - `y` dropped here while still borrowed
   |
note: borrowed value must be valid for the lifetime 'a as defined on the method body at 141:14...
  --> $DIR/region-borrow-params-issue-29793-small.rs:141:14
   |
LL |         fn g<'a>(&self, x: usize, y:usize) -> Box<Fn(bool) -> usize + 'a> {
   |              ^^

error[E0597]: `x` does not live long enough
  --> $DIR/region-borrow-params-issue-29793-small.rs:157:38
   |
LL |             let f = |t: bool| if t { x } else { y }; // (separate errors for `x` vs `y`)
   |                     ---------        ^ borrowed value does not live long enough
   |                     |
   |                     value captured here
...
LL |         }
   |         - `x` dropped here while still borrowed
   |
note: borrowed value must be valid for the lifetime 'a as defined on the method body at 156:14...
  --> $DIR/region-borrow-params-issue-29793-small.rs:156:14
   |
LL |         fn g<'a>(&self, x: usize, y:usize) -> Box<Fn(bool) -> usize + 'a> {
   |              ^^

error[E0597]: `y` does not live long enough
  --> $DIR/region-borrow-params-issue-29793-small.rs:157:49
   |
LL |             let f = |t: bool| if t { x } else { y }; // (separate errors for `x` vs `y`)
   |                     ---------                   ^ borrowed value does not live long enough
   |                     |
   |                     value captured here
...
LL |         }
   |         - `y` dropped here while still borrowed
   |
note: borrowed value must be valid for the lifetime 'a as defined on the method body at 156:14...
  --> $DIR/region-borrow-params-issue-29793-small.rs:156:14
   |
LL |         fn g<'a>(&self, x: usize, y:usize) -> Box<Fn(bool) -> usize + 'a> {
   |              ^^

error[E0597]: `x` does not live long enough
  --> $DIR/region-borrow-params-issue-29793-small.rs:185:38
   |
LL |             let f = |t: bool| if t { x } else { y }; // (separate errors for `x` vs `y`)
   |                     ---------        ^ borrowed value does not live long enough
   |                     |
   |                     value captured here
...
LL |         }
   |         - `x` dropped here while still borrowed
   |
note: borrowed value must be valid for the lifetime 'a as defined on the method body at 184:14...
  --> $DIR/region-borrow-params-issue-29793-small.rs:184:14
   |
LL |         fn g<'a>(&self, x: usize, y:usize) -> Box<Fn(bool) -> usize + 'a> {
   |              ^^

error[E0597]: `y` does not live long enough
  --> $DIR/region-borrow-params-issue-29793-small.rs:185:49
   |
LL |             let f = |t: bool| if t { x } else { y }; // (separate errors for `x` vs `y`)
   |                     ---------                   ^ borrowed value does not live long enough
   |                     |
   |                     value captured here
...
LL |         }
   |         - `y` dropped here while still borrowed
   |
note: borrowed value must be valid for the lifetime 'a as defined on the method body at 184:14...
  --> $DIR/region-borrow-params-issue-29793-small.rs:184:14
   |
LL |         fn g<'a>(&self, x: usize, y:usize) -> Box<Fn(bool) -> usize + 'a> {
   |              ^^

error[E0597]: `x` does not live long enough
  --> $DIR/region-borrow-params-issue-29793-small.rs:199:38
   |
LL |             let f = |t: bool| if t { x } else { y }; // (separate errors for `x` vs `y`)
   |                     ---------        ^ borrowed value does not live long enough
   |                     |
   |                     value captured here
...
LL |         }
   |         - `x` dropped here while still borrowed
   |
note: borrowed value must be valid for the lifetime 'a as defined on the method body at 198:14...
  --> $DIR/region-borrow-params-issue-29793-small.rs:198:14
   |
LL |         fn g<'a>(&self, x: usize, y:usize) -> Box<Fn(bool) -> usize + 'a> {
   |              ^^

error[E0597]: `y` does not live long enough
  --> $DIR/region-borrow-params-issue-29793-small.rs:199:49
   |
LL |             let f = |t: bool| if t { x } else { y }; // (separate errors for `x` vs `y`)
   |                     ---------                   ^ borrowed value does not live long enough
   |                     |
   |                     value captured here
...
LL |         }
   |         - `y` dropped here while still borrowed
   |
note: borrowed value must be valid for the lifetime 'a as defined on the method body at 198:14...
  --> $DIR/region-borrow-params-issue-29793-small.rs:198:14
   |
LL |         fn g<'a>(&self, x: usize, y:usize) -> Box<Fn(bool) -> usize + 'a> {
   |              ^^

error: aborting due to 20 previous errors

For more information about this error, try `rustc --explain E0597`.
